--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div id="demotext"> Ik heb gehoord dat je wil deelnemen aan de experimenten van de professor.  Speel dit spel om te bewijzen dat je waardig bent! Verzamel genoeg punten en los het raadsel op.
+    <div id="demotext"> Ik heb gehoord dat je wilt deelnemen aan de experimenten van de professor.  Speel dit spel om te bewijzen dat je waardig bent! Verzamel genoeg punten en los het raadsel op.
       klik eerst op het scherm, gebruik de pijltjestoetsen om te bewegen en spatie om te vuren.
     </div>
 </body>
